# tree-sitter-postgres

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  regenerate.yml
bindings/c/: tree-sitter-postgres.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_postgres/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPostgres/: postgres.h
bindings/swift/TreeSitterPostgresTests/: TreeSitterPostgresTests.swift
plpgsql/: grammar.js
plpgsql/src/: grammar.json  node-types.json  parser.c  scanner.c
plpgsql/test/corpus/: blocks.txt  control_flow.txt  cursors.txt  declarations.txt  diagnostics.txt  dynamic_sql.txt  exceptions.txt  loops.txt  statements.txt
postgres/: Package.swift  go.mod  grammar.js  harvest-conflicts.sh  known-conflicts.json  pyproject.toml  setup.py
postgres/bindings/c/: tree-sitter-postgres.pc.in
postgres/bindings/go/: binding.go  binding_test.go
postgres/bindings/python/tree_sitter_postgres/: binding.c
postgres/bindings/swift/TreeSitterPostgresTests/: TreeSitterPostgresTests.swift
postgres/queries/: highlights.scm  injections.scm
postgres/src/: grammar.json  node-types.json  parser.c
postgres/test/corpus/: cte.txt  ddl.txt  dml.txt  expressions.txt  joins.txt  misc.txt  select.txt  set_operations.txt  subqueries.txt  transactions.txt  window_functions.txt
script/: codegen.js  generate-grammar.js  generate-plpgsql-grammar.js  harvest-conflicts.sh  known-conflicts.json  parse-gram-y.js  parse-kwlist.js  parse-plpgsql-kwlist.js
src/: grammar.json  node-types.json
test/corpus/: set_operations.txt
