[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-postgres"
description = "Postgres grammar for tree-sitter"
version = "1.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "postgres"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.9"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/gmr/tree-sitter-postgres"

[project.optional-dependencies]
core = ["tree-sitter>=0.25"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
